--- a/index.html
+++ b/index.html
@@ -1130,7 +1130,8 @@
               <picture class="pure__picture">
                 <source srcset="./img/addition-info/pure-brilliance-390.png" media="(max-width: 390px)" />
                 <source srcset="./img/addition-info/pure-brilliance-834.png" media="(max-width: 834px)" />
-                <img class="pure__image--img" src="./img/about/pure-brilliance-1440.svg" alt="pure-brilliance" />
+                <img class="pure__image--img" src="./img/addition-info/pure-brilliance-1440.svg"
+                  alt="pure-brilliance" />
               </picture>
             </div>
           </div>
